@@ -23,9 +23,13 @@ public class Main extends Application {
 
 
     public static void main(String[] args) throws IOException{
+
+        String bernardConfig = "--module-path C:/Users/berna_000/Desktop/javafx-sdk-12/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml";
+        String bernardFile = "C:/Users/berna_000/Desktop/Pages from 1C-17A-4-33.pdf";
+
         launch(args);
         System.out.println("hello");
-        File file = new File("/Users/ohsonali/Documents/X-Force/Pages from 1C-17A-4-33.pdf");
+        File file = new File(bernardFile);
         PDDocument document = PDDocument.load(file);
 
         PDFTextStripper pdfStripper = new PDFTextStripper();
